remove settings reset

--- a/build.yaml
+++ b/build.yaml
@@ -2,5 +2,5 @@
 include:
   - board: seeeduino_xiao_ble
     shield: gamepad
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
+#  - board: seeeduino_xiao_ble
+#    shield: settings_reset
